<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activities.MainActivity">

  <Button
    android:id="@+id/addTaskButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:text="@string/add_task"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/allTasks"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/allTasks"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:text="@string/all_tasks"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/addTaskButton" />

  <TextView
    android:id="@+id/mainTasksGreetingLabel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="24dp"
    android:text="@string/my_tasks"
    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/imageView"
    android:layout_width="308dp"
    android:layout_height="191dp"
    android:contentDescription="@string/hero_image"
    app:layout_constraintBottom_toTopOf="@+id/addTaskButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/mainRecyclerView"
    app:srcCompat="@android:drawable/ic_menu_today" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/mainRecyclerView"
    android:layout_width="326dp"
    android:layout_height="276dp"
    app:layout_constraintBottom_toTopOf="@+id/imageView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/mainTasksGreetingLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>
