<resources>
  <string name="app_name">Taskmaster</string>
  <string name="title_activity_add_task">addTask</string>
  <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
  <string name="hello_world">Hello Square World!</string>
  <string name="add_task">Add Task</string>
  <string name="total_tasks">Total cloudTasks:</string>
  <string name="my_task">My cloudTask</string>
  <string name="do_something">Do something</string>
  <string name="title">Title</string>
  <string name="description">Description</string>
  <string name="title_activity_all_tasks">AllTasks</string>
  <!-- Strings used for fragments for navigation -->
  <string name="first_fragment_label">First Fragment</string>
  <string name="second_fragment_label">Second Fragment</string>
  <string name="next">Next</string>
  <string name="previous">Previous</string>

  <string name="hello_first_fragment">Hello first fragment</string>
  <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
  <string name="all_tasks">All Tasks</string>
  <string name="my_tasks">My Tasks</string>
  <string name="hero_image">hero image</string>
  <string name="submittedMsg">Submitted!</string>
  <string name="username">username</string>
  <string name="save">Save</string>
  <string name="settings">Settings</string>
  <string name="title_activity_settings">SettingsActivity</string>

  <!-- Preference Titles -->
  <string name="messages_header">Messages</string>
  <string name="sync_header">Sync</string>

  <!-- Messages Preferences -->
  <string name="signature_title">Your signature</string>
  <string name="reply_title">Default reply action</string>

  <!-- Sync Preferences -->
  <string name="sync_title">Sync email periodically</string>
  <string name="attachment_title">Download incoming attachments</string>
  <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
  <string name="attachment_summary_off">Only download attachments when manually requested</string>
  <string name="task_1">Task 1</string>
  <string name="task_3">Task 3</string>
  <string name="task_2">Task 2</string>
  <string name="task_4">Task 4</string>
  <string name="cloudTasks">Tasks</string>
  <string name="sample_lorem_ipsum_description">Sample Lorem Ipsum description.</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="atatchFile">Attatch File</string>
  <string name="title_activity_login">LoginActivity</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome !"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >5 characters</string>
  <string name="login_failed">"Login failed"</string>
    <string name="task_image">Task Image</string>
</resources>
