<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="54dp"
  tools:context=".fragments.TaskFragment">

  <!-- TODO: Update blank fragment layout -->

  <Button
    android:id="@+id/taskFragmentTaskButton"
    android:layout_width="332dp"
    android:layout_height="wrap_content" />

</FrameLayout>
