...
    android:text="@string/settings"
    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/editTextUsername"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="32dp"
    android:ems="10"
    android:hint="@string/username"
    android:importantForAutofill="no"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/saveSettingsButton"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/teamSpinner" />

  <Button
    android:id="@+id/saveSettingsButton"
...
